force-app/main/default/objects/Garantie__c/Garantie__c.object-meta.xml
<CustomObject>
    <description>Les garanties appliquées pour un produit selon leur catégorie</description>
    <label>Garantie</label>
    <nameField>
        <displayFormat>G/{YYYY}/{0000000}</displayFormat>
        <label>Numéro de la garanties</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garanties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>