force-app/main/default/objects/Garantie__c/fields/categorie__c.field-meta.xml
<CustomField>
    <fullName>categorie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catégorie</label>
    <referenceTo>CategorieGaranties__c</referenceTo>
    <relationshipLabel>Garanties</relationshipLabel>
    <relationshipName>Garanties</relationshipName>
    <type>Lookup</type>
</CustomField>