force-app/main/default/objects/Garantie__c/fields/dateDebutValidite__c.field-meta.xml
<CustomField>
    <fullName>dateDebutValidite__c</fullName>
    <label>Date début validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>