force-app/main/default/objects/Garantie__c/fields/dateFinValidite__c.field-meta.xml
<CustomField>
    <fullName>dateFinValidite__c</fullName>
    <label>Date fin validité</label>
    <type>Date</type>
</CustomField>